--- a/frontend/src/components/GameView/RoundView.css
+++ b/frontend/src/components/GameView/RoundView.css
@@ -185,7 +185,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
     }
 
     .table-row label {
@@ -210,6 +210,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 
     .round-field {
